--- a/module8New/module8StartingCode/module8StartingCode/views/story/edit.ejs
+++ b/module8New/module8StartingCode/module8StartingCode/views/story/edit.ejs
@@ -4,10 +4,10 @@
         <table>
             <tr>
                 <td><label for="title" >Title</label></td>
-                <td><input type="text" id="title" name="title" value = "<%= story.title%>" class = "fixed-width"></td>
+                <td><input type="text" id="title" name="title" value = "<%= story.title%>" class = "fixed-width" required></td>
             </tr>
             <tr><td class = "align-top"><label for="content">Content</label></td>
-                <td><textarea rows="5" id="content" name="content" class = "fixed-width"><%= story.content%></textarea></td>
+                <td><textarea rows="5" id="content" name="content" class = "fixed-width" required minlength="10"><%= story.content%></textarea></td>
             </tr>
             <tr>
                 <td colspan="2" class = "align-right"><button>Submit</button></td>
