--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,23 +1,23 @@
 <%- include('./partials/header.ejs')%>
 <form method="POST" action="/connections/<%= connection.id%>?_method=PUT" id="connection-form">
     <label for="topic">Topic</label>
-    <input type="text" placeholder="Enter Topic Here" id="topic" value="<%= connection.topic%>" name="topic">
+    <input type="text" placeholder="Enter Topic Here" id="topic" value="<%= connection.topic%>" name="topic" required>
     <label for="title-input">Name</label>
-    <input type="text" placeholder="Enter Name Here" id="title-input" value="<%= connection.name%>" name="name">
+    <input type="text" placeholder="Enter Name Here" id="title-input" value="<%= connection.name%>" name="name" required>
     <label for="host">Host</label>
-    <input type="text" placeholder="Enter Host Here" id="host" value="<%= connection.hostName%>" name="hostName">
+    <input type="text" placeholder="Enter Host Here" id="host" value="<%= connection.hostName%>" name="hostName" required>
     <label for="details-input" id="details-label">Details</label>
-    <input type="text" placeholder="Enter Details Here" id="details-input" value="<%= connection.details%>" name="details">
+    <input type="text" placeholder="Enter Details Here" id="details-input" value="<%= connection.details%>" name="details" required minlength="10">
     <label for="where-input" id="where-label">Where</label>
-    <input type="text" placeholder="Enter Location" id="where-input" value="<%= connection.location%>" name="location">
+    <input type="text" placeholder="Enter Location" id="where-input" value="<%= connection.location%>" name="location" required>
     <label for="when" id="when-label">When</label>
-    <input type="text" id="when" value="<%= connection.date%>" name="date">
+    <input type="text" id="when" value="<%= connection.date%>" name="date" required>
     <label for="start" id="start-label">Start</label>
-    <input type="text" id="start" value="<%= connection.startTime%>" name="startTime">
+    <input type="text" id="start" value="<%= connection.startTime%>" name="startTime" required>
     <label for="end" id="end-label">End</label>
-    <input type="text" id="end" value="<%= connection.endTime%>" name="endTime">
+    <input type="text" id="end" value="<%= connection.endTime%>" name="endTime" required>
     <label for="image-url" id="image-url-label">Image URL</label>
-    <input type="text" placeholder="Enter Image URL" id="image-url" value="<%= connection.image%>" name="image">
+    <input type="text" placeholder="Enter Image URL" id="image-url" value="<%= connection.image%>" name="image" required>
     <button id="connections-button">Update</button>
 </form>
 <%- include('./partials/footer.ejs')%>
