--- a/views/new-connection.ejs
+++ b/views/new-connection.ejs
@@ -4,8 +4,10 @@
         <input type="text" placeholder="Enter Topic Here" id="topic" name="topic" required>
         <label for="title-input">Name</label>
         <input type="text" placeholder="Enter Name Here" id="title-input" name="name" required>
+        <!--    HOST NAME GOES HERE
         <label for="host">Host</label>
         <input type="text" placeholder="Enter Host Here" id="host" name="hostName" required>
+        -->
         <label for="details-input" id="details-label">Details</label>
         <input type="text" placeholder="Enter Details Here" id="details-input" name="details" required minlength="10">
         <label for="where-input" id="where-label">Where</label>
