--- a/views/connection-detail.ejs
+++ b/views/connection-detail.ejs
@@ -1,16 +1,18 @@
 <%- include('./partials/header.ejs')%>
     <div id="connection-detail-div">
         <h1 id="event-name"><%= connection.name%>, <%= connection.location%>, <%= connection.date%>, <%= connection.startTime%> to <%= connection.endTime%></h1>
+        <h2 id="event-name"><%= connection.rsvpNum%> people have rsvp'd to this event</h2>
         <%if(user == connection.hostName._id){%>
             <form>
                 <button type="submit" formmethod="POST" id="delete-button" formaction="/connections/<%= connection.id%>?_method=DELETE">Delete</button>
                 <button type="submit" formmethod="GET" formaction="/connections/<%= connection.id%>/edit" id="update-button">Update</button>
             </form>
-        <%} else{%>
-        <form action="/:id/rsvp" method="POST">
-            <button type="submit" formmethod="POST" id="delete-button" formaction="/connections/<%= connection.id%>/rsvp" value="Yes" name="rsvp">Yes</button>
-            <button type="submit" formmethod="POST" formaction="/connections/<%= connection.id%>/rsvp" id="update-button" value="No" name="rsvp">No</button>
-            <button type="submit" formmethod="POST" formaction="/connections/<%= connection.id%>/rsvp" id="update-button" value="Maybe" name="rsvp">Maybe</button>
+        <%} else{%> 
+            <h2 id="event-name">Rsvp to attend!</h2>
+        <form action="/connections/<%= connection.id%>/rsvp" method="post">
+            <button type="submit" id="delete-button" value="Yes" name="response">Yes</button>
+            <button type="submit" id="update-button" value="No" name="response">No</button>
+            <button type="submit" id="update-button" value="Maybe" name="response">Maybe</button>
         </form>
         <%}%>
         <a href="connections.html">
