--- a/views/new-connection.ejs
+++ b/views/new-connection.ejs
@@ -24,3 +24,5 @@
         <input type="text" placeholder="Enter Image URL" id="image-url" name="image" required>
         <button id="connections-button">Create Connection</button>
     </form>
+
+    <%- include('./partials/footer.ejs')%>
