--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
         <label for="email" id="email-label">Email</label><br>
         <input type="email" id="email" name="email" required><br><br>
         <label for="password" id="password-label">Password</label><br>
-        <input type="password" id="password" name="password" required><br><br>
+        <input type="password" id="password" name="password" minlength="8" maxlength="64" required><br><br>
         <button id="sign-up-button">Login</button><br>
     </form>
 
